chore: Covered Pgbench Status loading from sts
Signed-off-by: Guilherme Elias <elias@ongres.com>

--- a/stackgres-k8s/src/common/src/main/resources/crds/SGDbOps.yaml
+++ b/stackgres-k8s/src/common/src/main/resources/crds/SGDbOps.yaml
@@ -389,26 +389,36 @@ spec:
                           nullable: true
                           description: |
                             The number of transaction processed.
-                        latencyAverage:
-                          type: number
-                          nullable: true
+                        latency:
+                          type: object
                           description: |
-                            Average latency of transactions.
-                        latencyStddev:
-                          type: number
-                          nullable: true
+                            The lantency results of the pgbench benchmark
+                          properties:
+                            average:
+                              type: number
+                              nullable: true
+                              description: |
+                                Average latency of transactions.
+                            standardDeviation:
+                              type: number
+                              nullable: true
+                              description: |
+                                Stdandard deviation latency of transactions.
+                        transactionsPerSecond:
+                          type: object
                           description: |
-                            Stdandard deviation latency of transactions.
-                        tpsIncludingConnectionsEstablishing:
-                          type: number
-                          nullable: true
-                          description: |
-                            Number of transaction per second including connection establishing.
-                        tpsExcludingConnectionsEstablishing:
-                          type: number
-                          nullable: true
-                          description: |
-                            Number of transaction per second excluding connection establishing.
+                            All the transactions per second results of the pgbench benchmark
+                          properties:
+                            includingConnectionsEstablishing:
+                              type: number
+                              nullable: true
+                              description: |
+                                Number of transaction per second including connection establishing.
+                            excludingConnectionsEstablishing:
+                              type: number
+                              nullable: true
+                              description: |
+                                Number of transaction per second excluding connection establishing.
                 majorVersionUpgrade:
                   type: object
                   description: |
