chore: Fix a type object on SGDbOps CRD
Signed-off-by: Guilherme Elias <elias@ongres.com>

--- a/stackgres-k8s/src/common/src/main/resources/crds/SGDbOps.yaml
+++ b/stackgres-k8s/src/common/src/main/resources/crds/SGDbOps.yaml
@@ -445,7 +445,7 @@ spec:
                                   description: |
                                     Transaction Per Second (tps) measure
                             excludingConnectionsEstablishing:
-                              type: number
+                              type: object
                               description: |
                                 Number of transaction per second excluding connection establishing.
                               properties:
