chore: Forgot to change the datatypeof standardDeviation to object
Signed-off-by: Guilherme Elias <elias@ongres.com>

--- a/stackgres-k8s/src/common/src/main/resources/crds/SGDbOps.yaml
+++ b/stackgres-k8s/src/common/src/main/resources/crds/SGDbOps.yaml
@@ -410,7 +410,7 @@ spec:
                                   description: |
                                     The latency measure unit represented by milliseconds
                             standardDeviation:
-                              type: number
+                              type: object
                               description: |
                                 The latency stdandard deviation of transactions.
                               properties:
