--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,10 @@
 version: '3.2'
 services:
   e2e-tests:
-    image: registry.gitlab.com/ongresinc/stackgres/stackgres/it:14.0
+    image: registry.gitlab.com/ongresinc/stackgres/stackgres/it:1.4
+    build:
+      context: ./stackgres-k8s/src/operator/src/test/docker/
+      dockerfile: Dockerfile.it
     container_name: sg-e2e-tests
     volumes:
     - /etc/passwd:/etc/passwd:ro 
@@ -15,33 +18,35 @@ services:
     working_dir: /stackgres
     privileged: true
     environment:
-        SKIP_NATIVE: "false"
-        SKIP_E2E: "false"
-        SKIP_DEPLOY: "false"
-        E2E_SHELL: /bin/sh
-        SHELL_XTRACE: "-x"
-        E2E_DEBUG: "true"
-        E2E_ENV: kind
-        E2E_PARALLELISM: 32
-        E2E_JOBS: 3
-        E2E_EXCLUSIVE_JOBS: 3
-        K8S_VERSION: 1.17.17
-        LATEST: "false"
-        CI_PROJECT_PATH: "/ongresinc/stackgres/"
-        SUFFIX: "-TBD"
-        KIND_NAME: kind-docker
-        K8S_REUSE: "false"
-        # K8S_FROM_DIND: "true"
-        K8S_FROM_DIND: "false"
-        E2E_BUILD_IMAGES: "false"
-        E2E_WAIT_OPERATOR: "false"
-        E2E_PULLED_IMAGES_PATH: "/tmp/pulled-images$SUFFIX"
-        KIND_LOCK_PATH: "/tmp/kind-lock$SUFFIX"
-        # KIND_CONTAINERD_CACHE_PATH: "/tmp/kind-cache$SUFFIX"
-        E2E_OPERATOR_REGISTRY: $CI_REGISTRY
-        E2E_OPERATOR_REGISTRY_PATH: /ongresinc/stackgres/
-        E2E_FORCE_IMAGE_PULL: "true"
-        K8S_USE_INTERNAL_REPOSITORY: "true"
-    entrypoint: |
-      /bin/sh -x stackgres-k8s/e2e/run-all-tests.sh
+      K8S_VERSION: 1.18.19
+        # SKIP_NATIVE: "false"
+        # SKIP_E2E: "false"
+        # SKIP_DEPLOY: "false"
+        # E2E_SHELL: /bin/sh
+        # SHELL_XTRACE: "-x"
+        # E2E_DEBUG: "true"
+        # E2E_ENV: kind
+        # E2E_PARALLELISM: 32
+        # E2E_JOBS: 3
+        # E2E_EXCLUSIVE_JOBS: 3
+        # LATEST: "false"
+        # CI_PROJECT_PATH: "/ongresinc/stackgres/"
+        # SUFFIX: "-TBD"
+        # KIND_NAME: kind-docker
+        # K8S_REUSE: "false"
+        # # K8S_FROM_DIND: "true"
+        # K8S_FROM_DIND: "false"
+        # E2E_BUILD_IMAGES: "false"
+        # E2E_WAIT_OPERATOR: "false"
+        # E2E_PULLED_IMAGES_PATH: "/tmp/pulled-images$SUFFIX"
+        # KIND_LOCK_PATH: "/tmp/kind-lock$SUFFIX"
+        # # KIND_CONTAINERD_CACHE_PATH: "/tmp/kind-cache$SUFFIX"
+        # E2E_OPERATOR_REGISTRY: $CI_REGISTRY
+        # E2E_OPERATOR_REGISTRY_PATH: /ongresinc/stackgres/
+        # E2E_FORCE_IMAGE_PULL: "true"
+        # K8S_USE_INTERNAL_REPOSITORY: "true"
+    entrypoint: tail -f /dev/null
+    # entrypoint: /bin/sh -x /usr/local/bin/docker-entrypoint.sh
+    # entrypoint: /usr/local/bin/dockerd -H unix://
+      # /bin/sh -x stackgres-k8s/e2e/run-all-tests.sh
     network_mode: "host"
