--- a/stackgres-k8s/src/operator/pom.xml
+++ b/stackgres-k8s/src/operator/pom.xml
@@ -130,6 +130,8 @@
           <execution>
             <goals>
               <goal>build</goal>
+              <goal>generate-code</goal>
+              <goal>generate-code-tests</goal>
             </goals>
           </execution>
         </executions>
