fix: Fluentd throw undefined method `synchronize` for nil:NilClass

--- a/stackgres-k8s/src/common/src/main/resources/versions.properties
+++ b/stackgres-k8s/src/common/src/main/resources/versions.properties
@@ -4,5 +4,5 @@ postgresql=12.1-build-6.4-dev,12.2-build-6.4-dev,12.3-build-6.4-dev,12.4-build-6
 envoy=1.17.1-build-6.2
 pgbouncer=1.15.0-build-6.2
 fluentbit=1.8.1-build-6.4-dev
-fluentd=1.13.2-build-6.4-dev
+fluentd=1.13.2-build-6.4
 kubectl=1.19.7-build-6.2
