--- a/stackgres-k8s/src/common/src/main/resources/versions.properties
+++ b/stackgres-k8s/src/common/src/main/resources/versions.properties
@@ -1,6 +1,6 @@
-patroni=2.1.0-build-6.4-dev
+patroni=2.1.0-build-6.4
 prometheus-postgres-exporter=0.9.0-build-6.2
-postgresql=12.1-build-6.4-dev,12.2-build-6.4-dev,12.3-build-6.4-dev,12.4-build-6.4-dev,12.5-build-6.4-dev,12.6-build-6.4-dev,13.0-build-6.4-dev,13.1-build-6.4-dev,13.2-build-6.4-dev
+postgresql=12.1-build-6.4,12.2-build-6.4,12.3-build-6.4,12.4-build-6.4,12.5-build-6.4,12.6-build-6.4,13.0-build-6.4,13.1-build-6.4,13.2-build-6.4
 envoy=1.17.1-build-6.2
 pgbouncer=1.15.0-build-6.2
 fluentbit=1.8.1-build-6.4
