ci: improve pipeline jobs retry

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,12 @@ variables:
   E2E_PARALLELISM: 32
   E2E_JOBS: 3
   E2E_EXCLUSIVE_JOBS: 3
+  E2E_RETRY: 2
+  E2E_FAILURE_RETRY: 3
+  ARTIFACT_DOWNLOAD_ATTEMPTS: 3
+  EXECUTOR_JOB_SECTION_ATTEMPTS: 3
+  GET_SOURCES_ATTEMPTS: 3
+  RESTORE_CACHE_ATTEMPTS: 3
   K8S_VERSION: 1.16.15
   K8S_FROM_DIND: "true"
   K8S_REUSE: "true"
