--- a/.gitlab-ci/build.yml
+++ b/.gitlab-ci/build.yml
@@ -9,6 +9,10 @@ build:
     - 'pip3 install yamllint yq'
     - 'mvn $MAVEN_CLI_OPTS clean verify -P safer'
     - 'sh -x stackgres-k8s/src/api-web/src/main/swagger/build.sh'
+  retry:
+    max: 2
+    when: [ unknown_failure, api_failure, stuck_or_timeout_failure, runner_system_failure, runner_unsupported,
+     stale_schedule, job_execution_timeout, archived_failure, unmet_prerequisites, scheduler_failure, data_integrity_failure ] 
   cache:
     paths:
       - $CI_PROJECT_DIR/.m2/repository
