--- a/.gitlab-ci/native-build.yml
+++ b/.gitlab-ci/native-build.yml
@@ -18,6 +18,10 @@
       flock "/tmp/stackgres-build$NATIVE_IMAGE_EXTRA_PREFIX-native-executable" \
         timeout -s KILL 3600 \
         mvn $MAVEN_CLI_OPTS package -P native $MAVEN_EXTRA_ARGS
+  retry:
+    max: 2
+    when: [ unknown_failure, api_failure, stuck_or_timeout_failure, runner_system_failure, runner_unsupported,
+     stale_schedule, job_execution_timeout, archived_failure, unmet_prerequisites, scheduler_failure, data_integrity_failure ] 
   artifacts:
     expire_in: 1 week
     when: always
