--- a/.gitlab-ci/test.yml
+++ b/.gitlab-ci/test.yml
@@ -10,6 +10,10 @@ unit tests:
     - stackgres-maven-runner
   script:
     - 'mvn $MAVEN_CLI_OPTS clean verify'
+  retry:
+    max: 2
+    when: [ unknown_failure, api_failure, stuck_or_timeout_failure, runner_system_failure, runner_unsupported,
+     stale_schedule, job_execution_timeout, archived_failure, unmet_prerequisites, scheduler_failure, data_integrity_failure ] 
   artifacts:
     expire_in: 1 week
     when: always
@@ -35,6 +39,10 @@ shell unit tests:
       cp -a "$TMP_PATH"/stackgres-k8s/src/operator/target stackgres-k8s/src/operator/target
       rm -rf "$TMP_PATH"
       exit "$EXIT_CODE"
+  retry:
+    max: 2
+    when: [ unknown_failure, api_failure, stuck_or_timeout_failure, runner_system_failure, runner_unsupported,
+     stale_schedule, job_execution_timeout, archived_failure, unmet_prerequisites, scheduler_failure, data_integrity_failure ] 
   artifacts:
     expire_in: 1 week
     when: always
@@ -52,6 +60,10 @@ swagger validations:
   script:
     - |
       yajsv -s stackgres-k8s/src/api-web/src/main/swagger/schema.json stackgres-k8s/src/api-web/target/swagger-merged.json
+  retry:
+    max: 2
+    when: [ unknown_failure, api_failure, stuck_or_timeout_failure, runner_system_failure, runner_unsupported,
+     stale_schedule, job_execution_timeout, archived_failure, unmet_prerequisites, scheduler_failure, data_integrity_failure ] 
   dependencies:
     - build
   artifacts:
@@ -71,51 +83,23 @@ swagger validations:
     E2E_SUFFIX: ""
   timeout: 12 hour
   script:
-    - set -e
-    - test "$E2E_JOBS" -ge 1 && test "$E2E_JOBS" -le 6
-    - test "$E2E_EXCLUSIVE_JOBS" -ge 1 && test "$E2E_EXCLUSIVE_JOBS" -le 6
-    - test "$DEBUG" != true || set -x
-    - SUFFIX="$(echo "-$E2E_SUFFIX-$E2E_RUN_ONLY" | tr -d '\n' | tr -c 'a-z0-9' '-' | sed 's/\(-[0-9]\+\)-[0-9]\+$/\1/')"
-    - SHELL_XTRACE="$([ "$E2E_DEBUG" = true ] && echo "-x" || echo "")"
-    - export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}$IMAGE_TAG_SUFFIX"
-    - export KIND_NAME="kind$SUFFIX"
-    - export K8S_REUSE="${K8S_REUSE:-true}"
-    - export K8S_FROM_DIND=true
-    - export E2E_BUILD_IMAGES=false
-    - export E2E_WAIT_OPERATOR=false
-    - export E2E_PULLED_IMAGES_PATH="/tmp/pulled-images$SUFFIX"
-    - export KIND_LOCK_PATH="/tmp/kind-lock$SUFFIX"
-    - export KIND_CONTAINERD_CACHE_PATH="/tmp/kind-cache$SUFFIX"
     - |
-      if [ "$E2E_CLEAN_IMAGE_CACHE" = "true" ]
+      if ! (test "$E2E_JOBS" -ge 1 && test "$E2E_JOBS" -le 6)
       then
-        rm -rf "$E2E_PULLED_IMAGES_PATH"
+        echo "E2E_JOBS must be between 1 and 6 (was $E2E_JOBS)"
+        exit 1
       fi
-    - |
-      if [ -n "$E2E_TEST" ]
+      if ! (test "$E2E_EXCLUSIVE_JOBS" -ge 1 && test "$E2E_EXCLUSIVE_JOBS" -le 6)
       then
-        export E2E_ONLY_INCLUDES="$E2E_TEST"
+        echo "E2E_EXCLUSIVE_JOBS must be between 1 and 6 (was $E2E_EXCLUSIVE_JOBS)"
+        exit 1
       fi
-    - export E2E_OPERATOR_REGISTRY=$CI_REGISTRY
-    - export E2E_OPERATOR_REGISTRY_PATH=/$CI_PROJECT_PATH/
-    - export E2E_FORCE_IMAGE_PULL=true
-    - export K8S_USE_INTERNAL_REPOSITORY=true
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
-    - |
-      if [ "$K8S_REUSE" = false ]
-      then
-        export K8S_DELETE=true
-        export E2E_SPEC_TRY_UNINSTALL_ON_FAILURE=true
-      fi
-    - |
-      unset DEBUG
-      flock -s /tmp/stackgres-build-operator-native-executable \
-        flock -s /tmp/stackgres-build-restapi-native-executable \
-        flock -s /tmp/stackgres-build-jobs-native-executable \
-        flock -s /tmp/stackgres-build-distributedlogs-controller-native-executable \
-        flock "/tmp/stackgres-integration-test$SUFFIX" \
-        timeout -s KILL 3600 \
-        "$E2E_SHELL" $SHELL_XTRACE stackgres-k8s/e2e/run-all-tests.sh
+      SHELL_XTRACE="$([ "$E2E_DEBUG" = true ] && echo "-x" || echo "")"
+    - sh $SHELL_XTRACE stackgres-k8s/ci/test/e2e-run-all-tests-gitlab.sh
+  retry:
+    max: 2
+    when: [ unknown_failure, api_failure, stuck_or_timeout_failure, runner_system_failure, runner_unsupported,
+     stale_schedule, job_execution_timeout, archived_failure, unmet_prerequisites, scheduler_failure, data_integrity_failure ] 
   artifacts:
     expire_in: 1 week
     when: always
