feat: Add a validation to check any update is performed if SGCluster is locked

--- a/stackgres-k8s/src/common/src/main/resources/application.properties
+++ b/stackgres-k8s/src/common/src/main/resources/application.properties
@@ -12,6 +12,5 @@ stackgres.crd.version=${stackgres.crd.version}
 stackgres.prometheus.allowAutobind=${stackgres.prometheus.allowAutobind}
 stackgres.documentation.uri=${stackgres.documentation.uri}
 stackgres.documentation.errorsPath=${stackgres.documentation.errorsPath}
-stackgres.dbops.pollInterval=${stackgres.dbops.pollInterval}
-stackgres.dbops.lockTimeout=${stackgres.dbops.lockTimeout}
-stackgres.dbops.podName=${stackgres.dbops.podName}
+stackgres.lockPollInterval=${stackgres.pollInterval}
+stackgres.lockTimeout=${stackgres.lockTimeout}
