--- a/stackgres-k8s/src/operator/src/main/resources/application.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/application.properties
@@ -54,6 +54,8 @@ stackgres.prometheus.allowAutobind=${stackgres.prometheus.allowAutobind}
 stackgres.documentation.uri=${stackgres.documentation.uri}
 stackgres.documentation.errorsPath=${stackgres.documentation.errorsPath}
 stackgres.extensionsRepositoryUrls=${stackgres.extensionsRepositoryUrls}
+stackgres.lockPollInterval=${stackgres.lockPollInterval}
+stackgres.lockTimeout=${stackgres.lockTimeout}
 
 # jOOQ
 org.jooq.no-logo=true
