--- a/stackgres-k8s/src/jobs/src/main/resources/application.properties
+++ b/stackgres-k8s/src/jobs/src/main/resources/application.properties
@@ -29,8 +29,9 @@ stackgres.operatorName=${stackgres.operatorName}
 stackgres.operatorNamespace=${stackgres.operatorNamespace}
 stackgres.conversionWebhooks=${stackgres.conversionWebhooks}
 stackgres.crdUpgrade=${stackgres.crdUpgrade}
-stackgres.operatorVersion=${stackgres.operatorVersion}
-stackgres.dbops.pollInterval=${stackgres.dbops.pollInterval}
-stackgres.dbops.lockTimeout=${stackgres.dbops.lockTimeout}
-stackgres.dbops.podName=${stackgres.dbops.podName}
 stackgres.databaseOperationCrName=${stackgres.databaseOperationCrName}
+stackgres.operatorVersion=${stackgres.operatorVersion}
+stackgres.dbops.lockPollInterval=${stackgres.lockPollInterval}
+stackgres.dbops.lockTimeout=${stackgres.lockTimeout}
+stackgres.dbops.serviceAccount=${stackgres.serviceAccount}
+stackgres.dbops.podName=${stackgres.podName}
