feat: Change SGPoolingConfig to improve pgbouncer.ini section

--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/sgpoolingconfig.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/sgpoolingconfig.yaml
@@ -15,8 +15,9 @@ spec:
   pgBouncer:
     {{- with (index .Values.configurations.poolingconfig.pgBouncer "pgbouncer.ini") }}
     pgbouncer.ini:
-    {{- range $key, $value := . }}
-      {{ $key }}: '{{ $value }}'
-    {{- end }}
+      pgbouncer:
+      {{- range $key, $value := . }}
+        {{ $key }}: '{{ $value }}'
+      {{- end }}
     {{- end }}
 {{ end }}
