--- a/stackgres-k8s/src/jobs/src/main/resources/application.properties
+++ b/stackgres-k8s/src/jobs/src/main/resources/application.properties
@@ -31,5 +31,6 @@ stackgres.conversionWebhooks=${stackgres.conversionWebhooks}
 stackgres.crdUpgrade=${stackgres.crdUpgrade}
 stackgres.operatorVersion=${stackgres.operatorVersion}
 stackgres.dbops.pollInterval=${stackgres.dbops.pollInterval}
-stackgres.dbops.lockTimeout=${stackgres.dbops.pollInterval}
+stackgres.dbops.lockTimeout=${stackgres.dbops.lockTimeout}
 stackgres.dbops.podName=${stackgres.dbops.podName}
+stackgres.databaseOperationCrName=${stackgres.databaseOperationCrName}
