feat: Extensions events generation for SGCluster and SGDistributedLogs

--- a/stackgres-k8s/src/cluster-controller/src/main/resources/application.properties
+++ b/stackgres-k8s/src/cluster-controller/src/main/resources/application.properties
@@ -47,7 +47,9 @@ stackgres.operatorImageVersion=${stackgres.operatorImageVersion}
 stackgres.containerBuild=${stackgres.containerBuild}
 stackgres.group=${stackgres.group}
 stackgres.crd.version=${stackgres.crd.version}
-
+stackgres.clusterControllerPodName=${stackgres.clusterControllerPodName}
+stackgres.clusterName=${stackgres.clusterName}
+stackgres.clusterNamespace=${stackgres.clusterNamespace}
 # jOOQ
 org.jooq.no-logo=true
 quarkus.log.category."org.jooq.Constants".level=OFF
