--- a/stackgres-k8s/src/distributedlogs-controller/src/main/resources/application.properties
+++ b/stackgres-k8s/src/distributedlogs-controller/src/main/resources/application.properties
@@ -47,6 +47,9 @@ stackgres.operatorImageVersion=${stackgres.operatorImageVersion}
 stackgres.containerBuild=${stackgres.containerBuild}
 stackgres.group=${stackgres.group}
 stackgres.crd.version=${stackgres.crd.version}
+stackgres.distributedlogsControllerPodName=${stackgres.distributedlogsControllerPodName}
+stackgres.distributedlogsName=${stackgres.distributedlogsName}
+stackgres.distributedlogsNamespace=${stackgres.distributedlogsNamespace}
 
 # jOOQ
 org.jooq.no-logo=true
