--- a/stackgres-k8s/src/common/src/main/resources/application.properties
+++ b/stackgres-k8s/src/common/src/main/resources/application.properties
@@ -9,8 +9,7 @@ stackgres.operatorVersion=${stackgres.operatorVersion}
 stackgres.operatorImageVersion=${stackgres.operatorImageVersion}
 stackgres.group=${stackgres.group}
 stackgres.crd.version=${stackgres.crd.version}
-stackgres.prometheus.allowAutobind=${stackgres.prometheus.allowAutobind}
 stackgres.documentation.uri=${stackgres.documentation.uri}
 stackgres.documentation.errorsPath=${stackgres.documentation.errorsPath}
-stackgres.lockPollInterval=${stackgres.pollInterval}
+stackgres.lockPollInterval=${stackgres.lockPollInterval}
 stackgres.lockTimeout=${stackgres.lockTimeout}
