--- a/stackgres-k8s/src/jobs/src/main/resources/application.properties
+++ b/stackgres-k8s/src/jobs/src/main/resources/application.properties
@@ -33,5 +33,5 @@ stackgres.databaseOperationCrName=${stackgres.databaseOperationCrName}
 stackgres.operatorVersion=${stackgres.operatorVersion}
 stackgres.dbops.lockPollInterval=${stackgres.lockPollInterval}
 stackgres.dbops.lockTimeout=${stackgres.lockTimeout}
-stackgres.dbops.serviceAccount=${stackgres.serviceAccount}
-stackgres.dbops.podName=${stackgres.podName}
+stackgres.dbops.serviceAccount=${stackgres.dbops.serviceAccount}
+stackgres.dbops.podName=${stackgres.dbops.podName}
