--- a/.gitlab-ci/native-build.yml
+++ b/.gitlab-ci/native-build.yml
@@ -32,7 +32,7 @@
   only:
     variables:
       - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME =~ /^main.*$/
-      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "master"
+      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "current"
       - $SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
       - $DO_DEPLOY
       - $DO_NATIVE
